# Project-H.I.V.E

./: .gitignore  Honeypot.py  Podman.py  Project-HIVE-Linux.spec  Project-HIVE-Windows.spec  README.md  USER_GUIDE.md  credentials.py  export.ndjson  main.py  pyproject.toml  requirements.txt
Containerisation/: containerisation.py
Honeypots/: honeypot.py
Honeypots/SSH/: Dockerfile  ssh.py
Project-HIVE-Linux/: Project-HIVE-Linux
app/: main.py
app/controllers/: honeypot_controller.py
app/exceptions/: honeypot_exceptions.py
app/models/: honeypot.py  honeypot_manager.py
app/routes/: honeypot_routes.py
app/schemas/: honeypot.py
common/: helpers.py
frontend/: __init__.py  app.py  routes.py
frontend-new/: app.py  log_manager_router.py
frontend-new/templates/: base.html  index.html
frontend/templates/: base.html  error.html
honeypot_manager/: Honeypot.py  honeypot_manager.py  main.py
honeypot_manager/config/: honeypot_configs.yaml
honeypot_manager/controllers/: honeypot_manager_controller.py
honeypot_manager/models/: Honeypot.py
honeypot_manager/schemas/: honeypot.py  honeypot_schemas.py
honeypot_manager/util/: exceptions.py  podman_client.py
honeypots/ssh/: Dockerfile  config.yaml
log_collector/: log_collector.py
log_manager/: Dockerfile  main.py  publisher.py
log_manager/controllers/: log_manager.py  log_manager_router.py  orchestrator.py
log_manager/models/: Log_Collector.py  (+3 more)
open-search/: demo.py  publisher.py  subscriber.py
podman_control/: Dockerfile  Podman.py
project_hive.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+116 files in other folders)
